# python-project-52

./: .env  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
task_manager/: settings.py  urls.py  views.py
task_manager/locale/en_US/LC_MESSAGES/: django.mo  django.po
task_manager/statuses/: models.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: forms.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py
task_manager/templates/: index.html  layout.html  login.html  u_create.html  user_delete.html  users.html
task_manager/templates/statuses/: s_create.html  s_delete.html  statuses.html
task_manager/templates/tasks/: t_create.html  tasks.html
task_manager/tests/: test_crud.py  test_login.py  test_status_crud.py  test_user_crud.py
task_manager/users/: forms.py  models.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py  0002_rename_user_users.py  0003_alter_users_created_at.py  0004_rename_users_user.py
