[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Sergeeva Larisa <mindzu@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.0"
python-dotenv = "^1.0.1"
dj-database-url = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
