[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Sergeeva Larisa <mindzu@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.0"
python-dotenv = "^1.0.1"
dj-database-url = "^2.2.0"
psycopg2-binary = "^2.9.9"
whitenoise = "^6.7.0"
brotli = "^1.1.0"
gunicorn = "^23.0.0"
uvicorn = "^0.30.6"
django-bootstrap5 = "^24.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
